--- a/News_aula2/jornal.html
+++ b/News_aula2/jornal.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html >
 <html>
 <head>
+    <meta charset="utf-8"> 
     <title> News Fiap </title>
     
 
 <body>
-    <h1> Olhar Digital </h1>
-
+    <div>
+    <label for ="news"> <b> News progress</b>:</label>
+    <progress id ="news " max ="100" value = "70"> 70% </progress>
+ 
     <img src="eyes.jpg" alt="De olho "> 
 
+    </div>
 
      <p> <b>A computação quântica causará o mesmo impacto que a Internet provocou em nossas vidas.
     E a evolução exponencial desta tecnologia nos leva a acreditar que já estamos diante dela.
@@ -46,14 +50,52 @@
 
     </table>
     </hgroup>
-
+    <div>
+    <hgroup>
     <h1> Demanda Por profissionais  de Blockchain </h1>
     <p> A procura por profissionais especializados em Blockchain está em crescimento e os salários para estas posições também.
          Confira entrevista do prof. Michel Fernandes, coordenador do MBA em Blockchain - Development & Technologie </p>
-        
-        <h2> <img> <src=" "></src></h2>
+        <h2>
+        <img src="safe.png">
+        <a href="www.fiap.com" target="_blank">Mais Informações</a>
+         </h2> 
+    </hgroup>
+
+    <h2> Robôs in 2019</h2>
+    <p> <img src="rob.jpg"  > <b>Os robôs já estão limpando o chão de casas há vários anos – inclusive no Brasil.
+         Agora, eles estão invadindo os jardins :) O jardineiro cibernético da iRobot promete manter a grama do seu quintal perfeita, sem que você precise mover uma palha – basta colocar balizas para ensinar o layout do jardim ao robô (para ele não cortar a grama perto de flores, por exemplo). 
+         O robô jardineiro funciona sem fios. 
+         Quando ele percebe que sua bateria está acabando, retorna para sua base, retomando sua tarefa assim que estiver Ok.
+         Ele estará à venda na Alemanha ainda neste ano, mas o preço ainda não foi informado</b>  <a href="https://fiap.me/RoboJardineiro" target="_blank">Mais Informações</a></p>>
+               </div>
+
+    <h1>Eventos</h1>
+
+    <table  border ="4" bgcolor="green">
+        <thead>
+            <tr colspan ="2">
+                <th>Data</th>
+                <th>Evento</th>
+                <th>Local</th>
+            </tr>
+        </thead>
+        <tbody>
+         <tr>
+            <th>03/04/2019</th>
+            <th> Luta de Robôs </th>
+            <th> Av.Paulista N*2389</th>
+        </tr>
+        <tfoot>
+        <tr>
+                <th>03/09/2019</th>
+                <th> BGS </th>
+                <th> Terra nova N*908</th>
+            </tr>
+        </tfoot>
+        </tbody>
 
 
+    </table>
 </body>
 </head>
 </html>
